Bug 252651 - Conflicts through fast marker/flag setting
Summary: Conflicts through fast marker/flag setting
Status: RESOLVED FIXED
Alias: None
Product: KMail Mobile
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Maemo 5 Linux
: NOR normal
Target Milestone: ---
Assignee: Ludwig Reiter
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-09-28 15:04 UTC by Felix Wolfsteller
Modified: 2011-05-15 11:36 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Felix Wolfsteller 2010-09-28 15:04:31 UTC
With version 4:4.5~20100928.1180427-1maemo1.1180334 , conflicts can be provoked.

0) start kmail-mobile
1) open a remote folder containing multiple mails
2) mark a couple of mails
3) quickly touch "Mark as Important", "Mark as Action Item" and "Mark Mail as Read"
4) A conflict warning appears about different flags set for mails.
Comment 1 Felix Wolfsteller 2010-09-28 15:07:38 UTC
In the steps to reproduce I forgot

1a) open maintenance view (touch folder again)

Conflict will also include the "Modification Time".
Similarly effect when touching Actions fastly multiple times.
Works also for single actions (e.g. touch "Mark as Important" 5 times).
Comment 2 Volker Krause 2010-11-15 10:24:28 UTC
There have been fixes in that area recently, does this still happen?
Comment 3 Volker Krause 2010-11-26 15:03:36 UTC
Ping?
Comment 4 Ludwig Reiter 2011-01-14 14:10:08 UTC
n900 version 20110106 Still happens

In the maintaince mode I fast click on the different mark/remove buttons, then a conflict appars.
Comment 5 Tobias Koenig 2011-01-17 10:45:36 UTC
SVN commit 1215012 by tokoe:

Disable revision check on flag change

The revision check is not needed here, so don't bring up any
conflict handling dialog.

BUG: 252651


 M  +1 -0      markascommand.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1215012
Comment 6 Ludwig Reiter 2011-02-17 14:14:37 UTC
tested with windos ce 
clicking many times on important, Action Item, Read/Unread doesn't lead to a conflict anymore. Closed.
Comment 7 Tobias Koenig 2011-05-15 11:36:40 UTC
Git commit a0637540377a15ca926142e37f9edb2b3fdeb448 by Tobias Koenig.
Committed on 17/01/2011 at 10:44.
Pushed by tokoe into branch '4.6'.

Disable revision check on flag change

The revision check is not needed here, so don't bring up any
conflict handling dialog.

BUG: 252651

svn path=/trunk/KDE/kdepimlibs/; revision=1215012
(cherry picked from commit b421125d7e1aa53effd157bb6fb2ab1bcb911639)

M  +1    -0    akonadi/kmime/markascommand.cpp     

http://commits.kde.org/kdepimlibs/a0637540377a15ca926142e37f9edb2b3fdeb448