Disable revision check on flag change

The revision check is not needed here, so don't bring up any
conflict handling dialog.

BUG: 252651

svn path=/trunk/KDE/kdepimlibs/; revision=1215012